add_library(
        core
        result.h
        size.cpp size.h
        rect.cpp rect.h
        view.cpp view.h
        result_message.h
        state.cpp state.h
        timer.cpp timer.h
        yaml_converters.h
        video_generator.h
        engine.cpp engine.h
        parser.cpp parser.h
        id_pool.cpp id_pool.h
        context.cpp context.h
        project.cpp project.h
        padding.cpp padding.h
        palette.cpp palette.h
        document.cpp document.h
        renderer.cpp renderer.h
        joystick.cpp joystick.h
        evaluator.cpp evaluator.h
        font_book.cpp font_book.h
        assembler.cpp assembler.h
        joysticks.cpp joysticks.h
        timer_pool.cpp timer_pool.h
        core_types.h core_types.cpp
        environment.cpp environment.h
        state_stack.cpp state_stack.h
        views/label.cpp views/label.h
        views/caret.cpp views/caret.h
        font_family.cpp font_family.h
        views/panel.cpp views/panel.h
        preferences.cpp preferences.h
        view_factory.cpp view_factory.h
        input_action.cpp input_action.h
        parser_types.cpp parser_types.h
        project_file.cpp project_file.h
        symbol_table.cpp symbol_table.h
        views/button.cpp views/button.h
        yaml_support.cpp yaml_support.h
        views/console.cpp views/console.h
        views/text_box.cpp views/text_box.h
        palette_entry.cpp palette_entry.h
        hex_formatter.cpp hex_formatter.h
        input_binding.cpp input_binding.h
        layout_engine.cpp layout_engine.h
        views/list_box.cpp views/list_box.h
        views/check_box.cpp views/check_box.h
        command_parser.cpp command_parser.h
        views/note_book.cpp views/note_book.h
        text_formatter.cpp text_formatter.h
        views/pick_list.cpp views/pick_list.h
        assembler_parser.cpp assembler_parser.h
        assembly_listing.cpp assembly_listing.h
        views/text_editor.cpp views/text_editor.h
        project_file_type.cpp project_file_type.h
        views/state_header.cpp views/state_header.h
        notification_center.cpp notification_center.h
        views/memory_editor.cpp views/memory_editor.h
        views/loadable_view.cpp views/loadable_view.h
        views/palette_editor.cpp views/palette_editor.h
        input_action_provider.cpp input_action_provider.h
        views/document_footer.cpp views/document_footer.h
        views/column_pick_list.cpp views/column_pick_list.h
        views/dock_layout_panel.cpp views/dock_layout_panel.h
        assembly_language_parser.cpp assembly_language_parser.h
        views/palette_entry_editor.cpp views/palette_entry_editor.h)